--- a/client/public/productInfo.html
+++ b/client/public/productInfo.html
@@ -93,7 +93,7 @@
                 </div>
                 
                 <div class="form-submit" style="text-align: center;">
-                    <button type="reset" name="cancel" id="back" class="submit" url="/tracking?qrCodeId=<%= trackingQRCode %>" value="">Close</button>
+                    <button type="reset" name="cancel" id="back" class="submit" url="/producttrackinghistory?qrCodeId=<%= trackingQRCode %>" value="">Close</button>
                 </div>
             </form>
         </div>
