--- a/client/public/queryResult_1.html
+++ b/client/public/queryResult_1.html
@@ -22,12 +22,41 @@
                         <label>Product:</label>
                     </div>
                     <div class="form-group-ans">
-                        <label><%= qrCodeId %></label>
+                        <label><%= productName %></label>
                     </div>
                 </div>
                 <div class="form-row">
-                	<div class="form-group-all">
-                        <label>Where did the tea come from?</label>
+                	<div class="form-group">
+                        <label>Items:</label>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label></label>
+                    </div>
+                    <div class="form-group-ans">
+                        <label>Milk</label>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label></label>
+                    </div>
+                    <div class="form-group-ans">
+                        <label class="color_link"><a href="/producttrackinghistory?qrCodeId=<%= childQRCodeId %>">Tea</a></label>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label></label>
+                    </div>
+                    <div class="form-group-ans">
+                        <label>Water</label>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label></label>
                     </div>
                 </div>
                 <div class="form-submit" style="text-align: center;">
