--- a/client/public/littlepo.html
+++ b/client/public/littlepo.html
@@ -18,7 +18,7 @@
 
         <div class="container">
             <div class="logo"><img src="/images/logo.jpeg"/></div>
-            <form method="POST" class="appointment-form" id="appointment-form">
+            <form method="POST" class="appointment-form" id="appointment-form" style="text-align: center;">
                 <h2>Littlepo Shop UI</h2>
                 <div class="form-group-1">
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Packer QRCode" required style="width: 250px;" />
@@ -41,7 +41,6 @@
                 <div class="form-submit">
                     <button type="reset" name="Scan" id="scan" class="cancel">Scan</button>
                     <button type="submit" name="submit" id="submit" class="submit">Submit</button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <button type="reset" name="logout" id="logout" class="submit">Logout</button>
                 </div>
             </form>
