--- a/client/public/productInfo.html
+++ b/client/public/productInfo.html
@@ -16,7 +16,7 @@
     <div class="main">
 
         <div class="container">
-            <div class="logo"><img src="/images/logo.jpeg"/></div>
+            <div class="logo"><div><img src="/images/logo.jpeg"/></div></div>
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Littlepo Query</h2>
                 <div class="form-row">
