--- a/client/public/scanharvester.html
+++ b/client/public/scanharvester.html
@@ -26,11 +26,11 @@
                         <video id="preview" class="video-back" playsinline style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
                     </div>
                 </div>
-                <div class="form-submit" style="text-align: center;">
-                    <button type="reset" name="back" id="back" url="/packer" class="cancel" value="">Cancel</button>
+                <div class="form-submit" style="align-items: center;">
+                    <button type="reset" name="back" id="back" url="/packer" class="cancel" value="">Back</button>
                     <button type="reset" name="Scan" id="scan" class="submit" value="">Scan</button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button type="submit" name="submit" id="submit" class="submit" value="" >Pack</button>
+                    <button type="submit" name="submit" id="submit" class="submit" value="">Pack</button>
+                    <button type="reset" name="logout" id="logout" class="submit" style="margin-right: 0px;">Logout</button>
                 </div>
             </form>
         </div>
