--- a/client/public/harvester.html
+++ b/client/public/harvester.html
@@ -17,19 +17,19 @@
     <div class="main">
         <div class="container">
             <div class="logo"><img src="/images/logo.jpeg"/></div>
-            <form method="POST" class="appointment-form" id="appointment-form">
+            <form method="POST" class="appointment-form" id="appointment-form" style="text-align: center;">
                 <h2>Create Harvest package</h2>
                 <div class="form-group-1">
-                    <div class="form-group-ans">
-                        <label>Product</label>
+                    <div style="width: 250px; display: inline-block;">
+                        <label style="text-align: left; width: 250px; display: inline-block;color:#A4A4A4;">Product</label>
                     </div>
                     <select name="productId" id="productId">
                         <option value="PK0001">Tea Package</option>
                     </select>
                 </div>
                 <div class="form-group-1">
-                    <div class="form-group-ans">
-                        <label>Package Type</label>
+                    <div style="width: 250px; display: inline-block;">
+                        <label style="text-align: left; width: 250px; display: inline-block;color:#A4A4A4;">Product</label>
                     </div>
                     <select name="packageType" id="packageType">
                         <option value="BOX">Box</option>
@@ -39,7 +39,6 @@
                 <div class="form-submit">
                     <!-- <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" /> -->
                     <button type="submit" name="submit" id="submit" class="submit">Submit</button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <button type="reset" name="logout" id="logout" class="submit">Logout</button>
                 </div>
             </form>
