--- a/client/public/retailshop.html
+++ b/client/public/retailshop.html
@@ -18,7 +18,7 @@
 
         <div class="container">
             <div class="logo"><img src="/images/logo.jpeg"/></div>
-            <form method="POST" class="appointment-form" id="appointment-form">
+            <form method="POST" class="appointment-form" id="appointment-form" style="text-align: center;">
                 <h2>Littlepo Tea Shop</h2>
                 <div class="form-group-1">
                     <input type="text" name="dxQRCodeId" id="dxQRCodeId" placeholder="Teabag QRCode" required style="width: 250px;"/>
@@ -27,16 +27,16 @@
                     <input type="number" step="0.01" name="price" id="price" placeholder="Price (in SGD)" required style="width: 250px;"/>
                 </div>
                 <div class="form-group-1">
-                    <div class="form-group-ans" style="text-align: left; width: 250px;">
-                        <label>Product</label>
+                    <div style="width: 250px; display: inline-block;">
+                        <label style="text-align: left; width: 250px; display: inline-block;color:#A4A4A4;">Product</label>
                     </div>
                     <select name="productId" id="productId">
                         <option value="TC0001">Milk Tea</option>
                     </select>
                 </div>
                 <div class="form-group-1">
-                    <div class="form-group-ans" style="text-align: left; width: 250px;">
-                        <label>Package Type</label>
+                    <div style="width: 250px; display: inline-block;">
+                        <label style="text-align: left; width: 250px; display: inline-block; color:#A4A4A4;">Package Type</label>
                     </div>
                     <select name="packageType" id="packageType" style="width: 250px;">
                         <option value="CUP">Cup</option>
@@ -53,7 +53,6 @@
                 <div class="form-submit">
                     <button type="reset" name="Scan" id="scan" class="cancel" value="">Scan</button>
                     <button type="submit" name="submit" id="submit" class="submit" value="">Submit</button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <button type="reset" name="logout" id="logout" class="submit" value="">Logout</button>
                 </div>
             </form>
