fix UI view issue

--- a/client/public/packer.html
+++ b/client/public/packer.html
@@ -22,15 +22,13 @@
                 <h2>Packer UI</h2>
                 <div class="form-group-1">
                     <input type="text" value ="<%= qrCodeId %>" name="qrCodeId" id="qrCodeId" placeholder="B Node QRCode" required readonly style="width: 250px;"/>
+                </div>
+                <div class="form-group-1">
                     <input type="number" name="weight" step="0.01" id="weight" placeholder="Package Weight" required style="width: 190px;"/>
                     <select name="weightType" id="weightType" style="width: 60px;">
                         <option value="KG">KG</option>
                         <option value="G">G</option>
                     </select>
-                    
-                    <!-- <input type="text" name="productID" id="productID" placeholder="Product Id" required /> -->
-                    <!-- <input type="text" name="productName" id="productName" placeholder="Product Name" required/> -->
-                    <!-- <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/> -->
                 </div>
                 <div class="form-group-1">
                     <div style="width: 250px; display: inline-block;">
